--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -13,10 +13,9 @@ html {
 body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   color: $mainTextColor;
   font-size: 16px;
-  line-height: 1.5;
 }
 
 .wrapper {
@@ -27,16 +26,25 @@ body {
 
 .main {
   flex-grow: 1;
+  
+  &__content {
+    display: grid;
+    grid-template-columns: 235px 1fr;
+    height: 100%;
+  }
 }
 
 .container {
   max-width: 1237px;
+  height: 100%;
   margin: 0 auto;
   padding: 0 16px;
 }
 
 .icon {
   display: block;
+  fill: inherit;
+  stroke: inherit;
 }
 
 .phone-icon{
@@ -51,4 +59,51 @@ body {
   width: 12px;
   height: 14px;
 }
+.logo-icon {
+  width: 100%;
+  height: 100%;
+}
 
+.title-block {
+  padding: 112px 0 80px 96px;
+  border-bottom: $border;
+}
+
+.title {
+  margin: 0;
+  font-weight: 400;
+  line-height: 1;
+  text-transform: uppercase;
+
+  &_h1 {
+    font-size: 80px;
+  }
+}
+
+.button {
+  padding: 0;
+  border: none;
+  outline: none;
+  width: 231px;
+  height: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background: $mainTextColor;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  color: #fff;
+  cursor: pointer;
+  transition: ease .3s;
+
+  &:hover {
+    background: $accentColor;
+  }
+
+  &:active {
+    background: rgb(208 188 122 / 50%);
+  }
+}
