--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,9 @@
 @import 'fonts';
 @import 'vars';
+@import '../../node_modules/swiper/swiper-bundle';
 @import 'layout';
 @import 'header';
 @import 'asideMenu';
-@import 'profileSection';
+@import 'profileInfo';
 @import 'formBlock';
+@import 'products';
