--- a/src/scss/formBlock.scss
+++ b/src/scss/formBlock.scss
@@ -14,6 +14,8 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  width: 100%;
+  max-width: 544px;
 
   &:not(.form-field:last-child) {
     margin-bottom: 26px;
