--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -15,9 +15,9 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'TimesNewRoman';
-  src: url('../fonts/TimesNewRoman-Bold.woff') format('woff'),
-       url('../fonts/TimesNewRoman-Bold.woff2') format('woff2');
+  font-family: 'TimesNewRomanItalic';
+  src: url('../fonts/TimesNewRoman-BoldIt.woff') format('woff'),
+       url('../fonts/TimesNewRoman-BoldIt.woff2') format('woff2');
   font-display: swap;
   font-weight: 700;
   font-style: normal;
