--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,14 @@
 .header {
-  padding: 20px 0;
+  padding: 16px 0;
   border-bottom: $border;
+  position: relative;
+
+  &.open-menu {
+    
+    .phone-block, .personal-block {
+      visibility: hidden;
+    }
+  }
 
   &__content {
     display: flex;
@@ -12,6 +20,10 @@
     display: flex;
     align-items: center;
     gap: 32px;
+
+    @media(max-width: $mobileMedia) {
+      gap: 0;
+    }
   }
 }
 
@@ -44,23 +56,36 @@
   letter-spacing: calc((14px * 4) / 100);
   text-transform: uppercase;
   stroke: $accentColor;
-  transition: all ease .3s;
+  transition: stroke fill ease .3s;
+
+  @media(max-width: $mobileMedia) {
+    padding: 9px;
+  }
 
   &:hover {
     stroke: $mainTextColor;
     color: $mainTextColor;
+  }
+
+  span {
+    @media(max-width: $mobileMedia) {
+      display: none;
+    }
   }
 }
 
 .personal-block {
   display: flex;
   align-items: center;
-  gap: 20px;
-  padding: 0 11px 0 9px;
-  transition: all ease .3s;
+
+  @media(max-width: $mobileMedia) {
+    padding: 0;
+    gap: 0;
+  }
 
   &__favor {
     stroke: $accentColor;
+    @include headerActions;
 
     &:hover {
       stroke: $mainTextColor;
@@ -69,6 +94,7 @@
 
   &__user {
     fill: $accentColor;
+    @include headerActions;
 
     &:hover {
       fill: $mainTextColor;
@@ -80,29 +106,139 @@
   background: transparent;
   border: none;
   padding: 0 6px;
-  outline: none;
   position: relative;
   width: 20px;
   height: 7.5px;
   cursor: pointer;
-  transition: all ease .3s;
+  margin-left: 6px;
+
+  @media(max-width: $mobileMedia) {
+    margin-left: 22px;
+    margin-right: 6px;
+    padding: 0;
+  }
 
   &::after {
     @include menuBtnLines;
     top: 0;
     left: 0;
+    transition: rotate ease .3s;
   }
 
   &::before {
     @include menuBtnLines;
     bottom: 0;
     left: 0;
+    transition: rotate ease .3s;
   }
 
   &:hover {
 
     &::before, &::after {
       background-color: $accentColor;
+    }
+  }
+
+  &.open {
+    transform: translate(5px, 1px);
+
+    &::after {
+      top: 5px;
+      rotate: 45deg;
+      transition: rotate .5s ease;
+    }
+
+    &::before {
+      bottom: 1px;
+      rotate: -45deg;
+      transition: rotate .5s ease;
+    }
+  }
+}
+
+.menu-block {
+  transform: translateX(-9999px);
+  position: absolute;
+  top: 63px;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 20;
+  padding: 204px 0 0 0;
+  transition: transform .3s ease-in;
+
+  @media(max-width: $mobileMedia) {
+    padding: 32px 0 0;
+    transform: translateX(-2000px);
+  }
+
+  &.open {
+    transform: translateX(0vw);
+    transition: transform .3s ease-out;
+  }
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    padding-left: 43px;
+
+    @media(max-width: $mobileMedia) {
+      padding-left: 0;
+    }
+  }
+
+  &__navigation {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 830px;
+    justify-content: space-between;
+
+    @media(max-width: $mobileMedia) {
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex-direction: column;
+      gap: 40px;
+    }
+  }
+
+  &__title {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 1;
+    margin-bottom: 24px;
+
+    @media(max-width: $mobileMedia) {
+      font-size: 20px;
+      margin-bottom: 16px;
+    }
+  }
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  @media(max-width: $mobileMedia) {
+    gap: 8px;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: rgba(33, 36, 46, 0.8);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    transition: color ease .3s;
+
+    &_current {
+      color: $accentColor;
+    }
+
+    &:hover {
+      color: $mainTextColor;
     }
   }
 }
