--- a/src/scss/productSlider.scss
+++ b/src/scss/productSlider.scss
@@ -1,9 +1,19 @@
 .out-slider {
   width: 100%;
   clip-path: inset(-100vw -100vw -100vw 0);
+
+  @media(max-width: $mobileMedia) {
+    clip-path: none;
+    margin-bottom: 32px;
+  }
 }
+
 .swiper-products {
   overflow: initial;
+
+  @media(max-width: $mobileMedia) {
+    overflow: hidden;
+  }
 
   .swiper-wrapper {
     width: 100vw;
@@ -13,6 +23,8 @@
 
 .product-card {
   border: 1px solid transparent;
+  border-radius: 8px;
+  background: #f7f7f7;
 
   &__top {
     position: relative
@@ -25,8 +37,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 24px 0 24px;
+    padding: 0 24px;
 
+    @media(max-width: $mobileMedia) {
+      padding: 0 16px;
+      top: 16px;
+    }
   }
 
   &__label {
@@ -42,7 +58,6 @@
 
   &__favorite {
     background: transparent;
-    outline: none;
     border: none;
     padding: 0;
     fill: #e4e4e4;
@@ -100,6 +115,10 @@
 
   &__bottom {
     padding: 24px;
+
+    @media(max-width: $mobileMedia) {
+      padding: 16px;
+    }
   }
 
   &__info {
