--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,6 +1,12 @@
+:root {
+  --widthScrollBar: 17px;
+}
+
 $mainTextColor: #21242E;
 $accentColor: #D0BC7A;
 $border: 1px solid #EBEBEB;
+$tabletMedia: 1024px;
+$mobileMedia: 600px;
 
 @mixin menuBtnLines {
   content: '';
@@ -8,4 +14,13 @@ $border: 1px solid #EBEBEB;
   width: 100%;
   height: 2px;
   background-color: $mainTextColor;
+  rotate: 0deg;
+}
+
+@mixin headerActions {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
